# cdgdeck

./: .gitignore  .travis.yml  CMakeLists.txt  LICENSE.txt  README.MD  cdg.cpp  cdg.h  cdgmain.cpp  cdgmain.h  cdgproj.rc  cdgrenderer.cpp  cdgrenderer.h  cdgui.cpp  cdgui.h  gen.cpp  gen.h  sdlutils.cpp  sdlutils.h  stdafx.h  vcpkg_deps.txt  vera.cpp  vera.h
.github/workflows/: test.yml
